code cleanup-III

--- a/notebooks/final_results.ipynb
+++ b/notebooks/final_results.ipynb
@@ -14,19 +14,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# plt.errorbar(xmean, ymean, xerr = xerr, yerr = yerr,\n",
-    "#                  c='red', capsize=3, label = 'best fit', marker='o')\n",
-    "\n",
-    "#     plt.scatter(results[item]['config']['mw'], results[item]['config']['sigma'],\n",
-    "#                 c='blue', marker='x', label = 'benchmark value')\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -147,250 +134,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Helper functions\n",
-    "Temporary to but will be added to py-file\n",
-    "\n",
-    "#TODO"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.clip(0 - np.array([1,-2]), -0.5, 1.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def save_canvas(name, save_dir = './figures'):\n",
-    "    dddm.check_folder_for_file(save_dir + '/.')\n",
-    "    dddm.check_folder_for_file(save_dir + '/pdf/.')\n",
-    "    if os.path.exists(save_dir) and os.path.exists(save_dir + '/pdf'):\n",
-    "        plt.savefig(f\"{save_dir}/{name}.png\", dpi=300, bbox_inches=\"tight\")\n",
-    "        plt.savefig(f\"{save_dir}/pdf/{name}.pdf\", dpi=300, bbox_inches=\"tight\")\n",
-    "    else:\n",
-    "        raise FileExistsError( f'{save_dir} does not exist or does not have /pdf')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from matplotlib.patches import Rectangle"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_prior_range(res, it, sigma_dist = [5,10]):\n",
-    "    assert len(sigma_dist) == 2\n",
-    "    xmean, xerr, ymean, yerr = res\n",
-    "    br = get_binrange(it)\n",
-    "    for _br in br[0]:\n",
-    "        plt.axvspan(_br, 2 * _br - xmean, alpha = 0.3, color = 'r')\n",
-    "    for _br in br[1]:     \n",
-    "        plt.axhspan(_br, 2 * _br - ymean,\n",
-    "                    xmin = br[0][0],\n",
-    "                    xmax = br[0][1],\n",
-    "                    alpha = 0.3, color = 'r')\n",
-    "    lims = [\n",
-    "        np.clip(\n",
-    "            xmean + sigma_dist[0] * np.array([-xerr, xerr]),\n",
-    "            *(br[0] + np.array([-0.25,0.25]))\n",
-    "        ),\n",
-    "        np.clip(\n",
-    "            ymean + sigma_dist[1] * np.array([-yerr, yerr]),\n",
-    "            *(br[1] + np.array([-0.5,0.5])))\n",
-    "    ]\n",
-    "\n",
-    "                \n",
-    "    plt.xlim(*lims[0])\n",
-    "    plt.ylim(*lims[1])  \n",
-    "\n",
-    "def plot_fit_res(res,  it = None, cs = ['r', 'b'], labels = ['best fit',  'benchmark value']):\n",
-    "    xmean, xerr, ymean, yerr = res\n",
-    "    plt.errorbar(xmean, ymean, xerr = xerr, yerr = yerr,\n",
-    "                 c = cs[0], capsize=3, label = labels[0], marker='o')\n",
-    "    if it:\n",
-    "        plt.scatter(results[it]['config']['mw'], results[it]['config']['sigma'],\n",
-    "                        c = cs[1],  marker='x', label = labels[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "def plot_check_compare(to_check, name_base, show = True, **kwargs):\n",
-    "    if os.path.exists( f'figures/{name_base}'):\n",
-    "        print(f'remove old figures/{name_base}')\n",
-    "        shutil.rmtree(f'figures/{name_base}')\n",
-    "    for l, its in enumerate(to_check):\n",
-    "        for k, it in enumerate(its):\n",
-    "            res = one_confidence_plot(it, corner=False, save_dir='figures/misc/')\n",
-    "            plot_prior_range(res, it)\n",
-    "            plot_fit_res(res, it)\n",
-    "            \n",
-    "            plt.grid(axis='y')\n",
-    "            plt.legend(loc='upper right')\n",
-    "            name = f'set{l}_sub{k}_' + name_base\n",
-    "            save_canvas(name, save_dir = f'figures/{name_base}/')\n",
-    "            \n",
-    "            if show: plt.show()\n",
-    "            else: plt.clf()\n",
-    "        if len(its):\n",
-    "            plt.figure(figsize=(10,6))\n",
-    "            res = overlay_confidence_plots(its, **kwargs)# , save_dir='figures/misc/')\n",
-    "            plot_prior_range(res[-1], its[0])\n",
-    "            for j, _res in enumerate(res):\n",
-    "                cs = [['orange', 'k'], ['cyan', 'k'], ['r', 'k']]\n",
-    "\n",
-    "                labels = [['best fit' , 'benckmark value'],\n",
-    "                          ['best fit' , 'benckmark value']]   \n",
-    "                if kwargs.get('cbar_notes'):\n",
-    "                    for i in range(len(labels)):\n",
-    "                        labels[i][0] += kwargs['cbar_notes'][i]\n",
-    "                plot_fit_res(_res, cs = cs[j], it = its[0] if j == 0 else None,\n",
-    "                            labels = labels[j])\n",
-    "            plt.grid(axis='y')\n",
-    "            plt.legend(loc='upper right')\n",
-    "            name = f'set{l}_' + name_base\n",
-    "            save_canvas(name, save_dir = f'figures/{name_base}/')\n",
-    "            if show: \n",
-    "                plt.show()\n",
-    "            else: plt.clf()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# if False:        if len(its):\n",
-    "#             res = overlay_confidence_plots(its, nsigma = 2, smoothing = True, nbins = 200)# , save_dir='figures/misc/')\n",
-    "#             plot_prior_range(res[-1], its[0])\n",
-    "#             for j, _res in enumerate(res):\n",
-    "#                 cs = [['orange', None], ['cyan', None], ['r', 'k']]\n",
-    "#                 labels = [['best sub-fit', None],\n",
-    "#                           ['best sub-fit', None],\n",
-    "#                           ['best fit', 'benckmark value']]                          \n",
-    "#                 plot_fit_res(_res, cs = cs[j], it = its[0] if j == len(res) else None, labels = labels[j])\n",
-    "#             plt.grid(axis='y')\n",
-    "#             name = f'set{l}_' + name_base\n",
-    "#             save_canvas(name, save_dir = f'figures/{name_base}/')\n",
-    "#             if show: \n",
-    "#                 plt.show()\n",
-    "#             else: plt.clf()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_check_combine(to_check, name_base, show = True, **combined_kwargs):\n",
-    "    for l, its in enumerate(to_check):\n",
-    "        print(its)\n",
-    "        for k, it in enumerate(its):\n",
-    "            res = one_confidence_plot(it, corner=False, save_dir='figures/misc/')\n",
-    "            plot_prior_range(res, it)\n",
-    "            plot_fit_res(res, it)\n",
-    "            \n",
-    "            plt.grid(axis='y')\n",
-    "            plt.legend(loc='upper right')\n",
-    "\n",
-    "            name = f'set{l}_sub{k}_' + name_base\n",
-    "            save_canvas(name, save_dir = f'figures/{name_base}/')\n",
-    "            if show: plt.show()\n",
-    "            else: plt.clf()\n",
-    "            \n",
-    "        # Combine plots 0 and 1: the two Ge components of the Ge-detector\n",
-    "        plt.figure(figsize=(12,6))\n",
-    "        res = three_confidence_plot(its[:2], **combined_kwargs)\n",
-    "        plot_prior_range(res[-1], its[0])\n",
-    "        for j, _res in enumerate(res):\n",
-    "            cs = [['orange', None], ['cyan', None], ['r', 'k']]\n",
-    "\n",
-    "            labels = [['best sub-fit', None],\n",
-    "                      ['best sub-fit', None],\n",
-    "                      ['best fit', 'benckmark value']]                          \n",
-    "            if combined_kwargs.get('cbar_notes'):\n",
-    "                for i in range(len(labels)):\n",
-    "                    labels[i][0] += combined_kwargs['cbar_notes'][i]\n",
-    "#             print('allo')\n",
-    "#             print(_res,cs[j], \n",
-    "#                          its[0] if j == len(res)-1 else None, \n",
-    "#                          labels[j])\n",
-    "            plot_fit_res(_res, cs = cs[j], \n",
-    "                         it = its[0] if j == len(res)-1 else None, \n",
-    "                         labels = labels[j])\n",
-    "            plt.legend(loc='upper right')\n",
-    "        name = f'set{l}_sub{k+1}_' + name_base\n",
-    "        save_canvas(name, save_dir = f'figures/{name_base}/')\n",
-    "        if show: plt.show()\n",
-    "        else: plt.clf()\n",
-    "                \n",
-    "        # Overlay combined plot        \n",
-    "        if len(its):\n",
-    "            # make this plot twice (once of the combined plot and one as intermediate results)\n",
-    "            for _ in [0, 1]:\n",
-    "                plt.figure(figsize=(10,6))\n",
-    "                kwargs_copy = combined_kwargs.copy()\n",
-    "                del kwargs_copy['cbar_notes']\n",
-    "                kwargs_copy['cbar_note'] = '\\nGe combined'\n",
-    "                res = two_confidence_plot(its[:2], **kwargs_copy)#,  save_dir='figures/misc/')\n",
-    "                plot_prior_range(res, its[0])\n",
-    "                plot_fit_res(res, \n",
-    "                             it = its[0], \n",
-    "                             labels = ['best fit Ge', None])\n",
-    "                if _ == 0:\n",
-    "                    plt.legend(loc='upper right')\n",
-    "                    plt.grid(axis='y')\n",
-    "                    name = f'set{l}_sub{k+2}_' + name_base\n",
-    "                    save_canvas(name,  save_dir = f'figures/{name_base}/')\n",
-    "                    if show: plt.show()\n",
-    "                    else: plt.clf()\n",
-    "            # Plot the Xe-dataset\n",
-    "            for k, i in enumerate(its):\n",
-    "                if k<2: continue\n",
-    "                kwargs_copy['cbar_note'] = '\\nXe combined'\n",
-    "                \n",
-    "                res = _one_confidence_plot(i, **kwargs_copy, \n",
-    "                                     cmap = [cm.viridis, cm.gnuplot2_r, cm.gist_heat][k])\n",
-    "                plot_prior_range(res, i)\n",
-    "                plot_fit_res(res, \n",
-    "                         it = i, \n",
-    "                         cs = ['cyan', 'blue'],\n",
-    "                         labels = ['best fit Xe', 'benchmark value'])\n",
-    "            plt.legend(loc='upper right')\n",
-    "            plt.grid(axis='y')\n",
-    "            name = f'set{l}_' + name_base\n",
-    "            save_canvas(name,  save_dir = f'figures/{name_base}/')\n",
-    "            if show: plt.show()\n",
-    "            else: plt.clf()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Earth shielding\n",
     "Below we compare the earth shielding versus non-earth shielding. To this end we first select a 'normal' dataset with a high cross-section for the given mass. We also list the other opportunities, one could make another selection. For presentation purposes not all scenarios are presented below.\n",
     "\n",
@@ -486,8 +229,7 @@
     "opts = dict(\n",
     "    nsigma = 2, smoothing = True, nbins = 200, alpha = 0.5,\n",
     "    cbar_notes = ['\\nno shielding', '\\nshielding']\n",
-    ")\n",
-    "plot_check_compare(to_check, 'shielding_any', **opts)"
+    ")"
    ]
   },
   {
@@ -507,30 +249,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Look at the matches where the cross-section is the biggeest\n",
-    "# for its in to_check_biggest:\n",
-    "#     for it in its:\n",
-    "#         one_confidence_plot(it, corner=False)\n",
-    "#         plt.grid(axis='y')\n",
-    "#         plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "# # Or have a look at a random selection of arbitrary cross-sections\n",
-    "# random_set = np.random.randint(0,len(to_check))\n",
-    "# # for its in to_check:\n",
-    "# for its in to_check[random_set:random_set+1]:\n",
-    "#     for it in its:\n",
-    "#         one_confidence_plot(it, corner=False)\n",
-    "#         plt.grid(axis='y')\n",
-    "#         plt.show()"
+    "plot_check_compare(to_check, 'shielding_any', show = False, **opts)"
    ]
   },
   {
@@ -589,7 +308,7 @@
     "    nsigma = 2, smoothing = True, nbins = 200, alpha = 0.5,\n",
     "    cbar_notes = ['\\nno shielding', '\\nshielding']\n",
     ")\n",
-    "plot_check_compare(to_check, 'Ge_HV_shielding_any', **opts)"
+    "plot_check_compare(to_check, 'Ge_HV_shielding_any', show = False, **opts)"
    ]
   },
   {
@@ -687,7 +406,7 @@
     "# plot_check_compare(to_check[random_set:random_set+1], 'random_astrph')\n",
     "\n",
     "# or plot all sets\n",
-    "plot_check_compare(to_check, 'any_astrph', show = True, **opts)"
+    "plot_check_compare(to_check, 'any_astrph', show = False, **opts)"
    ]
   },
   {
@@ -752,7 +471,7 @@
     "    cbar_notes = ['\\nfixed astrophysics', '\\nastrophysical uncertainties']\n",
     ")\n",
     "# or plot all sets\n",
-    "plot_check_compare(to_check, 'Ge_HV_any_astrph', show = True, **opts)"
+    "plot_check_compare(to_check, 'Ge_HV_any_astrph', show = False, **opts)"
    ]
   },
   {
@@ -829,74 +548,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# plot_check_combine(to_check, 'ge_vs_xe', show = False)\n",
-    "# [182, 30, 250]\n",
-    "# # # Or have a look at a random selection of arbitrary cross-sections\n",
-    "# # random_set = np.random.randint(0,len(to_check))\n",
-    "# # plot_check_combine(to_check[random_set:random_set+1], 'random_ge_vs_xe')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "opts = dict(\n",
     "    nsigma = 2, smoothing = True, nbins = 200, \n",
     "    cbar_notes = ['\\nGe HV ', '\\nGe iZIP', '\\nGe-tot']\n",
     ")\n",
-    "plot_check_combine(to_check, 'ge_vs_xe', **opts)\n",
-    "\n",
-    "# # Or have a look at a random selection of arbitrary cross-sections\n",
-    "# random_set = np.random.randint(0,len(to_check))\n",
-    "# plot_check_combine(to_check[random_set:random_set+1], 'random_ge_vs_xe')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def fun(E):\n",
-    "    a = 31.71\n",
-    "    b = 0.15\n",
-    "    sigma_over_E = b + a/np.sqrt(E)\n",
-    "    return sigma_over_E/100\n",
-    "\n",
-    "def sigma(E):\n",
-    "    return fun(E)*E\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ens = np.linspace(0,3000, 100)"
+    "plot_check_combine(to_check, 'ge_vs_xe', show = False, **opts)"
    ]
   },
   {
@@ -907,41 +566,9 @@
    },
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(8,4))\n",
-    "plt.plot(ens, 100 * \n",
-    "         fun(ens))\n",
-    "plt.title('REPLICATION figure 6 https://arxiv.org/abs/2003.03825')\n",
-    "plt.xlabel('E [keV]')\n",
-    "plt.ylabel('$\\sigma/E$ [%]')\n",
-    "plt.ylim(0,5)\n",
-    "plt.xlim(0,3000)\n",
-    "plt.grid()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ens = np.linspace(0.001,10, 100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(5,3))\n",
-    "plt.plot(ens, sigma(ens)/ens, label = 'XENON1T')\n",
-    "plt.plot(ens, dddm.det_res_XENON1T(ens)/ens, label = 'XENONnT')\n",
-    "plt.plot(ens, dddm.det_res_superCDMS(ens)/ens, label = 'superCDMS')\n",
-    "plt.ylim(0,1)\n",
-    "plt.xlim(0,ens[-1])\n",
-    "plt.legend()\n",
-    "plt.grid()\n",
-    "plt.xlabel('')"
+    "# # Or have a look at a random selection of arbitrary cross-sections\n",
+    "random_set = np.random.randint(0,len(to_check))\n",
+    "plot_check_combine(to_check[random_set:random_set+1], 'random_ge_vs_xe')"
    ]
   },
   {
